src/src_random/RNGs.h


void srandgen (unsigned long seed);
void genrandint (unsigned long int *r, unsigned long int n);
void genrand (double* rn);
void genrand_sp (float* rn);
void genrandn(double* result);

void hg_genrand (double* rn, void* rng);
void hg_genrandn(double* result, void* rng);